# eleman

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.cpp
include/eleman/: curlutil.h  elevationcache.h  elevationdata.h  elevationdownloader.h  elevationexception.h  elevationio.h  elevationmanager.h  elevationregion.h  elevationutils.h  elevationvendor.h  elevationvendor_impl.h  grid.h
src/: curlutil.cpp  elevationcache.cpp  elevationdata.cpp  elevationdownloader.cpp  elevationexception.cpp  elevationio.cpp  elevationmanager.cpp  elevationregion.cpp  elevationutils.cpp  elevationvendor.cpp  elevationvendor_impl.cpp
